--- a/package.json
+++ b/package.json
@@ -9,14 +9,26 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/material": "^7.1.0",
+    "@mui/x-charts": "^8.3.1",
+    "@mui/x-data-grid": "^8.3.1",
+    "@radix-ui/react-slot": "^1.2.2",
+    "axios": "^1.9.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.511.0",
+    "next": "14.2.28",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.28"
+    "tailwind-merge": "^3.3.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
     "eslint": "^8",
-    "eslint-config-next": "14.2.28"
+    "eslint-config-next": "14.2.28",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1"
   }
 }
